--- a/SecretSantaAPI/appsettings.json
+++ b/SecretSantaAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token" : "my top secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost\\sqlexpress;database=pingdb;trusted_connection=true;TrustServerCertificate=true"
   },
